package pt.example.entity;

import java.sql.Date;
import java.sql.Timestamp;

import javax.persistence.Column;
import javax.persistence.Entity;
import javax.persistence.GeneratedValue;
import javax.persistence.GenerationType;
import javax.persistence.Id;
import javax.persistence.Table;

import com.fasterxml.jackson.annotation.JsonProperty;

@Entity
@Table(name = "PE_MOV_CAB")
public class PE_MOV_CAB {
	@Id
	@GeneratedValue(strategy = GenerationType.IDENTITY)
	@JsonProperty("ID")
	private Integer ID;
	@JsonProperty("ESTADO")
	private String ESTADO;
	@JsonProperty("DATA_CRIA")
	private Timestamp DATA_CRIA;
	@JsonProperty("UTZ_CRIA")
	private Integer UTZ_CRIA;
	@JsonProperty("DATA_MODIF")
	private Timestamp DATA_MODIF;
	@JsonProperty("UTZ_MODIF")
	private Integer UTZ_MODIF;
	@JsonProperty("DATA_ANULA")
	private Timestamp DATA_ANULA;
	@JsonProperty("UTZ_ANULA")
	private Integer UTZ_ANULA;
	@JsonProperty("ATIVO")
	private Boolean ATIVO;
	@JsonProperty("DEPARTAMENTO")
	private Integer DEPARTAMENTO;
	@JsonProperty("RESPONSAVEL")
	private Integer RESPONSAVEL;
	@JsonProperty("ANO_PLANO")
	private Integer ANO_PLANO;
	@JsonProperty("TIPO")
	private String TIPO;
	@JsonProperty("DATA_FECHA")
	private Timestamp DATA_FECHA;
	@JsonProperty("UTZ_FECHA")
	private Integer UTZ_FECHA;
	
	public Integer getID() {
		return ID;
	}

	public String getESTADO() {
		return ESTADO;
	}

	public Timestamp getDATA_CRIA() {
		return DATA_CRIA;
	}

	public Integer getUTZ_CRIA() {
		return UTZ_CRIA;
	}

	public Timestamp getDATA_MODIF() {
		return DATA_MODIF;
	}

	public Integer getUTZ_MODIF() {
		return UTZ_MODIF;
	}

	public Timestamp getDATA_ANULA() {
		return DATA_ANULA;
	}

	public Integer getUTZ_ANULA() {
		return UTZ_ANULA;
	}

	public Boolean getATIVO() {
		return ATIVO;
	}

	public Integer getDEPARTAMENTO() {
		return DEPARTAMENTO;
	}

	public Integer getRESPONSAVEL() {
		return RESPONSAVEL;
	}

	public Integer getANO_PLANO() {
		return ANO_PLANO;
	}

	public void setID(Integer iD) {
		ID = iD;
	}

	public void setESTADO(String eSTADO) {
		ESTADO = eSTADO;
	}

	public void setDATA_CRIA(Timestamp dATA_CRIA) {
		DATA_CRIA = dATA_CRIA;
	}

	public void setUTZ_CRIA(Integer uTZ_CRIA) {
		UTZ_CRIA = uTZ_CRIA;
	}

	public void setDATA_MODIF(Timestamp dATA_MODIF) {
		DATA_MODIF = dATA_MODIF;
	}

	public void setUTZ_MODIF(Integer uTZ_MODIF) {
		UTZ_MODIF = uTZ_MODIF;
	}

	public void setDATA_ANULA(Timestamp dATA_ANULA) {
		DATA_ANULA = dATA_ANULA;
	}

	public void setUTZ_ANULA(Integer uTZ_ANULA) {
		UTZ_ANULA = uTZ_ANULA;
	}

	public void setATIVO(Boolean aTIVO) {
		ATIVO = aTIVO;
	}

	public void setDEPARTAMENTO(Integer dEPARTAMENTO) {
		DEPARTAMENTO = dEPARTAMENTO;
	}

	public void setRESPONSAVEL(Integer rESPONSAVEL) {
		RESPONSAVEL = rESPONSAVEL;
	}

	public void setANO_PLANO(Integer aNO_PLANO) {
		ANO_PLANO = aNO_PLANO;
	}

	public String getTIPO() {
		return TIPO;
	}

	public void setTIPO(String tIPO) {
		TIPO = tIPO;
	}

	public Timestamp getDATA_FECHA() {
		return DATA_FECHA;
	}

	public Integer getUTZ_FECHA() {
		return UTZ_FECHA;
	}

	public void setDATA_FECHA(Timestamp dATA_FECHA) {
		DATA_FECHA = dATA_FECHA;
	}

	public void setUTZ_FECHA(Integer uTZ_FECHA) {
		UTZ_FECHA = uTZ_FECHA;
	}
	
	

}